namespace StreamingApp.Models;

public class Categorie
{
    public string Nom { get; set; } = string.Empty;
    public string Description { get; set; } = string.Empty;
}