namespace StreamingApp.Models;

public class Personne
{
    public string Nom { get; set; } = string.Empty;
    public string Prenom { get; set; } = string.Empty;
    public string Sexe { get; set; } = string.Empty;
}
