@startuml
!theme hacker
' Define classes
class Personne {
    + string Nom
    + string Prenom
    + string Sexe
}

class Client {
    + DateTime DateInscription
    + string Courriel
    + string Password
    + List<CarteCredit> CartesCredit
}

class Acteur {
    + string NomPersonnage
    + DateTime DebutEmploi
    + DateTime FinEmploi
    + decimal Cachet
}

class Employe {
    + DateTime DateEmbauche
    + string CodeUtilisateur
    + string Password
    + string TypeAcces
}

class CarteCredit {
    + string Numero
    + DateTime DateExpiration
    + string CodeSecret
}

class Film {
    + string Nom
    + TimeSpan Duree
    + string Description
    + List<Categorie> Categories
}

class Categorie {
    + string Nom
    + string Description
}

' Define inheritance
Personne <|-- Client
Personne <|-- Acteur
Personne <|-- Employe

' Define associations
Client "1" *-- "0..*" CarteCredit : possède
Film "1" *-- "0..*" Categorie : appartient à
Film "1" *-- "0..*" Acteur : joue dans

' Add notes for constraints
note top of Client
    Un client peut avoir plusieurs cartes de crédit.
end note

note top of Film
    Un film peut appartenir à plusieurs catégories.
end note

note top of Acteur
    Un acteur peut jouer dans plusieurs films.
end note
@enduml